--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 html {
   font-size: 62.5%;
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: $m-size;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.5rem;
 }
 
 button {
